Added Tic Tac Toe + Homepage changes

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <h3>JavaScript</h3>
                     <ol>
                         <li><a href="pages/projects/javascript/1-Library/index.html">Library</a></li>
+                        <li><a href="pages/projects/javascript/2-Tic-Tac-Toe/">Tic Tac Toe</a></li>
                     </ol>
                 </div>
             </div>
