--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <ol>
                         <li><a href="pages/projects/javascript/1-Library/index.html">Library</a></li>
                         <li><a href="pages/projects/javascript/2-Tic-Tac-Toe/">Tic Tac Toe</a></li>
+                        <li><a href="pages/projects/javascript/3-Restaurant-Page/dist/index.html">Restaurant Page</a></li>
                     </ol>
                 </div>
             </div>
