Todo List V1 + Homepage changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <script src="index.js" defer></script>
 </head>
 <body>
     <div class="gradient" id="gradient"></div>
@@ -17,7 +16,6 @@
         <div class="nav-link-container">
             <a href="https://github.com/0TacoTom0">My GitHub</a>
             <a href="#projects">Projects</a>
-            <button onclick="changeMode()"><img src="assets/dark-mode.svg" id="modeImg"></button>
         </div>
     </nav>
     <section class="header-section-container">
@@ -56,6 +54,7 @@
                         <li><a href="pages/projects/javascript/1-Library/index.html">Library</a></li>
                         <li><a href="pages/projects/javascript/2-Tic-Tac-Toe/">Tic Tac Toe</a></li>
                         <li><a href="pages/projects/javascript/3-Restaurant-Page/dist/index.html">Restaurant Page</a></li>
+                        <li><a href="pages/projects/javascript/4-Todo-List/dist/index.html">Todo List</a></li>
                     </ol>
                 </div>
             </div>
